--- a/dep_file/deployment_network.yaml
+++ b/dep_file/deployment_network.yaml
@@ -1,3 +1,2 @@
-template-file-path: ./private_ec2_instance_with_public subnet/network.yml
-parameters: {}
+template-file-path: ./repo/test.yaml
 tags: {}
