--- a/dep_file/deployment_network.yaml
+++ b/dep_file/deployment_network.yaml
@@ -1,2 +1,2 @@
-template-file-path: private_ec2_instance_with_public/network.yml
+template-file-path: ./private_ec2_instance_with_public/network.yml
 tags: {}
